SERVER-57000 Fix handling of correlated pipeline with facet